--- a/styles/style.css
+++ b/styles/style.css
@@ -120,3 +120,52 @@ i:hover{
 }
 
 /* header styles end */
+
+/* online market sites section styles start */
+
+.market-sites-section{
+    width:80%;
+    height:100px;
+    margin:0 auto;
+    margin-top:5.5rem;
+}
+
+.logos-container{
+    width:90%;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    box-sizing:border-box;
+    background-color:#f1f1f1;
+    border-radius:0.8rem;
+    box-shadow:20px 15px 10px rgba(119, 119, 119, 0.5);
+    margin-top:2rem;
+    padding:0.5rem 0.8rem;
+}
+
+.logo img{
+   width:90%;
+}
+
+.amazon{
+    margin-top:0.5rem;
+}
+
+.daraz, 
+.rakuten, 
+.walmart{
+    margin-top:0.3rem;
+}
+
+.ebay{
+    margin-top:0.1rem;
+}
+
+.logo img:hover{
+    cursor:pointer;
+    background-color:blueviolet;
+    border-radius:1rem;
+    padding:0.3rem;
+}
+
+/* online market sites section styles end */
