added featured products section and made it mobile screen responsive

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -61,7 +61,7 @@
         text-align:center;
     }
 
-    .btn1{
+    .header-text-content button{
         margin-left:5rem;
     }
 
@@ -103,8 +103,44 @@
     }
 
     .see-more{
-        margin-left:67%;
+        margin-left:65%;
     }
 
     /* popular collection section responsive end */
+
+    /* featured products section responsive start */
+
+    .featured-products-container{
+        margin-top:3rem;
+        flex-direction:column-reverse;
+    }
+
+    .featured-description{
+        width:100%;
+    }
+
+    .featured-title{
+        font-size:1.5rem;
+        text-align:center;
+    }
+
+    .featured-introduction{
+        font-size:1rem;
+    }
+
+    #join-now-btn{
+      margin-left:25%;
+    }
+
+    .featured-image-content{
+        width:100%;
+        margin-top:10%;
+    }
+
+    .featured-image-content img{
+        width:100%;
+        height:90%;
+    }
+
+    /* featured products section responsive end */
 }
